@@ -1,3 +1,12 @@
+2010-08-04  Robert Millan  <rmh@gnu.org>
+
+	Support OpenSolaris in ZFS device resolution.
+
+	* configure.ac: Check for getmntany().
+	* kern/emu/misc.c [HAVE_GETMNTANY]: Include `<sys/mnttab.h>'.
+	[HAVE_GETMNTANY] (grub_find_zpool_from_mount_point): Add OpenSolaris
+	support.
+
 2010-08-03  Robert Millan  <rmh@gnu.org>
 
 	Fix grub-emu build.
